--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,12 @@ align-items: center;
   margin-bottom: 8px;  
 }
 
+.content form label span {
+  font-weight: normal;
+  color: #999;
+  font-size: 12px;
+}
+
 
 .content form input {
   font-size: 16px;
