--- a/src/pages/Dashboard/styles.css
+++ b/src/pages/Dashboard/styles.css
@@ -47,6 +47,7 @@ ul.notifications li button {
   border: 0;
   font-weight: bold;
   margin-top: 10px;
+  cursor: pointer;
 }
 
 ul.notifications li button.accept {
